[package]
name = "bw-key"
description = "Tool for add keys to ssh-agent from bitwarden server"
version = "0.1.0"
license = "Apache"
authors = [
    "berton wang <haipengno1@gmail.com>"
]
repository = "https://github.com/haipengno1/bw-key"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paw = "1.0.0"
rpassword = "5.0"
structopt = { version = "0.3.25", features = ["paw"] }
ureq = { version = "*", features = ["json", "charset"] }
aes = "0.7.5"
byteorder = "1.4.3"
openssl="0.10.38"
serde = {version = "1.0.87", features = ["derive"]}
log = "0.4.6"
bytes = { version = "0.4.11", optional = true }
snafu = "0.6"
#reqwest = { version = "0.11.6", features = ["blocking", "json"] }
uuid = { version = "0.8", features = ["v4"] }
zeroize = "1.1"
base64 = "0.13"
region = "3.0.0"
arrayvec = "0.5"
serde_json = "1.0"
serde_path_to_error = "0.1"
block-modes = "0.8.1"
ring = "0.16"
#tokio = { version = "1.14.0", features = ["full"] }
#async-trait = "0.1"
rand = "0.7"
[[bin]]
name = "bw-key"
path = "src/main.rs"
