[package]
name = "bw-key"
description = "Tool for add keys to ssh-agent from bitwarden server"
version = "0.1.2"
license = "Apache"
authors = [
    "berton wang <haipengno1@gmail.com>"
]
repository = "https://github.com/haipengno1/bw-key"
readme = "README.md"
edition = "2021"

[dependencies]
paw = "1.0.0"
rpassword = "^7.0"
structopt = { version = "^0.3", features = ["paw"] }
ureq = { version = "^2.9", features = ["json", "charset"] }
byteorder = "^1.5"
serde = {version = "^1.0", features = ["derive"]}
log = { version = "^0.4", features = [ "std","max_level_debug", "release_max_level_warn"] }
bytes = { version = "^1.6", optional = true }
snafu = "^0.8"
uuid = { version = "^1.8", features = ["v4","fast-rng"] }
zeroize = "^1.7"
base64 = "^0.22"
region = "^3.0"
arrayvec = "^0.7"
serde_json = "1.0"
serde_path_to_error = "^0.1"
cryptovec="0.6"
bcrypt-pbkdf="^0.10"
ring = "^0.17"
rand = "^0.8"
pem = "^3"
ctr = "^0.9"
[dependencies.block-modes]
version = "0.8"
optional = true
[dependencies.aes]
version = "0.7"
features = ["ctr"]
optional = true
[target.'cfg(target_arch = "x86_64")'.dependencies]
openssl = { version = "0.10", features = ["vendored"]}
[target.'cfg(target_arch = "aarch64")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
[dependencies.des]
version = "0.7"
optional = true
[dependencies.cipher]
version = "0.3"
features = ["std"]
optional = true
[target.'cfg(windows)'.dependencies]
named_pipe = "0.4"
[features]
default = ["rustcrypto-cipher"]
rustcrypto-cipher = ["block-modes", "aes", "des", "cipher"]

[[bin]]
name = "bw-key"
path = "src/main.rs"